--- a/sections/scooterModel.liquid
+++ b/sections/scooterModel.liquid
@@ -24,7 +24,7 @@
         <div class="feature-container">
           <div class="model-price">
             <p class="first-model-price">{{ section.settings['first-model-price'] }}</p>
-            <p class="second-model-price">{{ section.settings['second-model-price'] }}</p>
+            {% comment %} <p class="second-model-price">{{ section.settings['second-model-price'] }}</p> {% endcomment %}
           </div>
 
           <ul class="feature-list">
