--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1190,6 +1190,12 @@
   border-radius: 30px 30px 0 0;
 }
 
+#scooterModel .feature-container .feature-info{
+  background: #18181c;
+  padding: 15px 25px;
+  border-radius: 30px;
+}
+
 
 
  @media screen and (max-width: 1920px){
