--- a/sections/scooterModel.liquid
+++ b/sections/scooterModel.liquid
@@ -26,7 +26,7 @@
             <p class="first-model-price">{{ section.settings['first-model-price'] }}</p>
             {% comment %} <p class="second-model-price">{{ section.settings['second-model-price'] }}</p> {% endcomment %}
           </div>
-
+          <div class="feature-info">
           <ul class="feature-list">
             {% for block in section.blocks %}
               <li class="feature">
@@ -35,6 +35,7 @@
               </li>
             {% endfor %}
           </ul>
+        </div>
         </div>
       </div>
     </div>
