--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1196,6 +1196,44 @@
   border-radius: 30px;
 }
 
+#scooterModel .feature-container .feature-info .feature-list{
+  padding: 0;
+}
+
+#scooterModel .feature-info .feature-list li{
+  list-style-type: none;
+  color: #9e9e9e;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 350;
+  font-family: Gotham;
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-bottom: 5px;
+  padding-left: 45px;
+  min-height: 31px;
+}
+
+#scooterModel .feature-info .feature-list li:before{
+    content: "";
+    box-sizing: border-box;
+    width: 29px;
+    height: 29px;
+    left: 0px;
+    top: 0px;
+    background: #222228;
+    border: 1px solid #31323B;
+    border-radius: 6px;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    background-image: url(Check-Info.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+}
 
 
  @media screen and (max-width: 1920px){
