--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1271,6 +1271,8 @@
     line-height: 20px;
     letter-spacing: .05em;
     text-transform: uppercase;
+    background-color: #00e3a5;
+    border: none;
 }
 
 
