--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1196,13 +1196,14 @@
   height: 87px;
   left: 50%;
   transform: translate(-50%);
-  top: -46px;
+  top: -65px;
   border: 1px solid #31323b;
   border-bottom: unset;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 30px 30px 0 0;
+  border: none;
 }
 
 #scooterModel .feature-container .feature-info{
@@ -1265,7 +1266,7 @@
     border-radius: 4px;
     left: 50%;
     transform: translate(-50%);
-    bottom: -38px;
+    bottom: -28px;
     font-weight: 400;
     font-size: 16.5199px;
     line-height: 20px;
@@ -1273,6 +1274,7 @@
     text-transform: uppercase;
     background-color: #00e3a5;
     border: none;
+    cursor: pointer;
 }
 
 
