--- a/sections/scooterModel.liquid
+++ b/sections/scooterModel.liquid
@@ -10,7 +10,7 @@
           <div class="df-model-img">
             <img src="{{section.settings.img-one | img_url:'master' }}" alt="df-model-img">
           </div>
-          <div class="dfx-model-img">
+          <div class="df-model-img">
             <img src="{{section.settings.img-two | img_url:'master' }}" alt="dfx-model-img">
           </div>
         </div>
@@ -35,16 +35,21 @@
               </li>
             {% endfor %}
           </ul>
-
-          <ul class="feature-list">
-            {% for block in section.blocks %}
-              <li class="feature">
-                {{ block.settings.feature }}
-                <span class="feature-desc">{{ block.settings['feature-desc'] }}</span>
-              </li>
-            {% endfor %}
-          </ul>
         </div>
+        <div class="feature-container">
+            <div class="model-price">
+              <p class="first-model-price">{{ section.settings['second-model-price'] }}</p>
+            </div>
+            <div class="feature-info">
+            <ul class="feature-list">
+              {% for block in section.blocks %}
+                <li class="feature">
+                  {{ block.settings.feature }}
+                  <span class="feature-desc">{{ block.settings['feature-desc'] }}</span>
+                </li>
+              {% endfor %}
+            </ul>
+          </div>
         <div class="reserve-btn">
         <button>{{section.settings.btn-text}}</button>
         </div>
