--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1117,7 +1117,7 @@
   display: block;
 }
 
-.df-model-img-active{
+#scooterModel .model-images .df-model-img.df-model-img-active{
   display: block;
 }
 
@@ -1184,7 +1184,7 @@
   display: none;
 }
 
-.feature-container-active{
+#scooterModel .model-content-two .feature-container.feature-container-active{
   display: block;
 }
 
