--- a/sections/scooterModel.liquid
+++ b/sections/scooterModel.liquid
@@ -21,6 +21,7 @@
           <button class="btn df-model" data-tab="2">{{ section.settings['second-btn-txt'] }}</button>
         </div>
         <a href="#">{{ section.settings.compare-txt }}</a>
+        <div class="main-feature">
         <div class="feature-container feature-container-active" data-tab="1">
           <div class="model-price">
             <p class="first-model-price">{{ section.settings['first-model-price'] }}</p>
@@ -51,6 +52,7 @@
             </ul>
           </div>
           </div>
+        </div>
         <div class="reserve-btn">
         <button>{{section.settings.btn-text}}</button>
         </div>
