--- a/sections/scooterModel.liquid
+++ b/sections/scooterModel.liquid
@@ -7,10 +7,10 @@
         <p>{{ section.settings.para }}</p>
         </div>
         <div class="model-images">
-          <div class="df-model-img df-model-img-active">
+          <div class="df-model-img df-model-img-active" data-tab="1">
             <img src="{{section.settings.img-one | img_url:'master' }}" alt="df-model-img">
           </div>
-          <div class="df-model-img">
+          <div class="df-model-img" data-tab="2">
             <img src="{{section.settings.img-two | img_url:'master' }}" alt="dfx-model-img">
           </div>
         </div>
