--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1089,13 +1089,14 @@
 
 
  #scooterModel .model-content-one .model-header h2 {
-  font-size: 2.5rem;
+  font-size: 4.5rem;
   line-height: 3.625rem;
   font-family: D-Fly-Light;
   color: #fff;
   font-weight: 700;
   margin-bottom: 0;
   margin-top: 0;
+  text-transform: uppercase;
 }
 
 
