--- a/sections/blackbgReview.liquid
+++ b/sections/blackbgReview.liquid
@@ -1,42 +1,44 @@
 <section id="blackbgreview">
-<div class="blackbgreview">
-<div class="content">
-<h2>{{section.settings.heading}}</h2>
-<p>{{section.settings.desc}}</p>
-</div>
-</div>
+  <div class="blackbgreview">
+    <div class="content">
+      <div class="heading">
+        <h2>{{ section.settings.heading }}</h2>
+      </div>
+      <div class="desc">
+        <p>{{ section.settings.desc }}</p>
+      </div>
+    </div>
+  </div>
 </section>
 {% schema %}
-  {
-    "name": "Blackbg Review",
-    "tag": "section",
-    "class": "section",
-    "settings": [
-    ],
-    "blocks":[
+{
+  "name": "Blackbg Review",
+  "tag": "section",
+  "class": "section",
+  "settings": [],
+  "blocks": [
+    {
+      "name": "Review Block",
+      "type": "reviews",
+      "settings": [
         {
-        "name": "Review Block",
-        "type": "reviews",
-        "settings": [
-            {
-            "type": "text",
-            "id": "heading",
-            "label": "Main Title"
-            },
-            {
-                "type": "text",
-                "id": "desc",
-                "label": "Description"
-            }
-        ]
+          "type": "text",
+          "id": "heading",
+          "label": "Main Title"
+        },
+        {
+          "type": "text",
+          "id": "desc",
+          "label": "Description"
         }
-    ],
-    "presets": [
-      {
-        "name": "Blackbg Review",
-        "settings": {
-        }
-      }
-    ]
-  }
+      ]
+    }
+  ],
+  "presets": [
+    {
+      "name": "Blackbg Review",
+      "settings": {}
+    }
+  ]
+}
 {% endschema %}
