--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1298,6 +1298,9 @@
   width: 90%;
   margin: 0 auto;
   background: #16161d;
+  max-width: 1200px;
+  margin-right: 150px;
+  margin-left: 150px;
 }
 
 
