--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1292,15 +1292,13 @@
 
 .blackbgreview{
   width: 100%;
+  padding: 0 100px;
 }
 
 .blackbgreview .content{
-  width: 90%;
-  margin: 0 auto;
+  width: 100%;
   background: #16161d;
-  max-width: 1200px;
-  margin-right: 150px;
-  margin-left: 150px;
+  padding: 80px;
 }
 
 
