--- a/sections/blackbgReview.liquid
+++ b/sections/blackbgReview.liquid
@@ -1,6 +1,6 @@
 <section id="blackbgreview">
   <div class="blackbgreview">
-    <div class="content">
+    <div class="black-content">
     {%for block in section.blocks%}
     <div class="main-content">
       <div class="heading">
