--- a/sections/reservenow.liquid
+++ b/sections/reservenow.liquid
@@ -27,3 +27,20 @@
     </div>
   </div>
 </section>
+{% schema %}
+  {
+    "name": "Reserve Now",
+    "tag": "section",
+    "class": "",
+    "settings": [
+      
+    ],
+    "presets": [
+      {
+        "name": "Reserve Now",
+        "settings": {
+        }
+      }
+    ]
+  }
+{% endschema %}
