--- a/sections/reservenow.liquid
+++ b/sections/reservenow.liquid
@@ -31,7 +31,7 @@
   {
     "name": "Reserve Now",
     "tag": "section",
-    "class": "",
+    "class": "section",
     "settings": [
       
     ],
