--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1338,6 +1338,26 @@
 }
 
 
+.reservenow {
+  position: fixed;
+  top: 0;
+  z-index: -1;
+  left: 0;
+  background: rgba(0,0,0,.7);
+  width: 100%;
+  height: 100%;
+  max-height: 100vh;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  overflow: auto;
+  padding: 50px 15px 100px;
+  /* opacity: 0;
+  visibility: hidden; */
+  transition: all .3s ease-in-out;
+}
+
 
 
 
