--- a/sections/reservenow.liquid
+++ b/sections/reservenow.liquid
@@ -1,5 +1,8 @@
 <section id="reservenow">
   <div class="reservenow">
+    <button class="close-btn">
+        <img src="" alt="Close Button" />
+    </button>
     <div class="reserve-wrapper">
       <div class="reserve-header">
         <img src="" alt="">
