--- a/sections/reservenow.liquid
+++ b/sections/reservenow.liquid
@@ -5,7 +5,7 @@
     </button>
     <div class="reserve-wrapper">
       <div class="reserve-header">
-        <img src="../assets/dragonfly.png" alt="logo">
+        <img src="../asdragonfly.png" alt="logo">
         <h2>Lean into it</h2>
       </div>
       <div class="reserve-container">
