--- a/sections/reservenow.liquid
+++ b/sections/reservenow.liquid
@@ -5,7 +5,7 @@
     </button>
     <div class="reserve-wrapper">
       <div class="reserve-header">
-        <img src="../asdragonfly.png" alt="logo">
+        <img src="https://cdn.shopify.com/s/files/1/0741/7161/3489/t/10/assets/dragonfly.png?v=1683281032" alt="logo">
         <h2>Lean into it</h2>
       </div>
       <div class="reserve-container">
